--- a/Övning_2_3/Övning_2_3.csproj
+++ b/Övning_2_3/Övning_2_3.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{D911EA8D-B966-45C8-818F-2453E478772F}</ProjectGuid>
+    <ProjectGuid>{7760E046-9F42-43AE-B594-2FB3871C3E38}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>Övning_2._2</RootNamespace>
-    <AssemblyName>Övning 2.2</AssemblyName>
+    <RootNamespace>Övning_2_3</RootNamespace>
+    <AssemblyName>Övning_2_3</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -47,16 +47,25 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Anställd.cs" />
-    <Compile Include="Form2_2.cs">
+    <Compile Include="Form2_3.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form2_2.Designer.cs">
-      <DependentUpon>Form2_2.cs</DependentUpon>
+    <Compile Include="Form2_3.Designer.cs">
+      <DependentUpon>Form2_3.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Parse_error.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Parse_error.Designer.cs">
+      <DependentUpon>Parse_error.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Form2_2.resx">
-      <DependentUpon>Form2_2.cs</DependentUpon>
+    <EmbeddedResource Include="Form2_3.resx">
+      <DependentUpon>Form2_3.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Parse_error.resx">
+      <DependentUpon>Parse_error.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
