--- a/Bank_Övning/Bank_Övning.csproj
+++ b/Bank_Övning/Bank_Övning.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{7760E046-9F42-43AE-B594-2FB3871C3E38}</ProjectGuid>
+    <ProjectGuid>{235D6782-FFBD-4E83-B35C-47CBAC7204AC}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>Övning_2_3</RootNamespace>
-    <AssemblyName>Övning_2_3</AssemblyName>
+    <RootNamespace>Bank_Övning</RootNamespace>
+    <AssemblyName>Bank_Övning</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -46,17 +46,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Anställd.cs" />
-    <Compile Include="Form2_3.cs">
+    <Compile Include="Bank.cs" />
+    <Compile Include="BankKonto.cs" />
+    <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form2_3.Designer.cs">
-      <DependentUpon>Form2_3.cs</DependentUpon>
+    <Compile Include="Form1.Designer.cs">
+      <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="LåneKonto.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Form2_3.resx">
-      <DependentUpon>Form2_3.cs</DependentUpon>
+    <Compile Include="SparKonto.cs" />
+    <EmbeddedResource Include="Form1.resx">
+      <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
