--- a/Bank_Övning/Bank_Övning.csproj
+++ b/Bank_Övning/Bank_Övning.csproj
@@ -56,6 +56,9 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="LåneKonto.cs" />
+    <Compile Include="MyButton.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SparKonto.cs" />
