--- a/Bank_Övning/Bank_Övning.csproj
+++ b/Bank_Övning/Bank_Övning.csproj
@@ -49,11 +49,11 @@
   <ItemGroup>
     <Compile Include="Bank.cs" />
     <Compile Include="BankKonto.cs" />
-    <Compile Include="Form1.cs">
+    <Compile Include="BankWindow.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="BankWindow.Designer.cs">
+      <DependentUpon>BankWindow.cs</DependentUpon>
     </Compile>
     <Compile Include="LåneKonto.cs" />
     <Compile Include="MyButton.cs">
@@ -62,8 +62,8 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SparKonto.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="BankWindow.resx">
+      <DependentUpon>BankWindow.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
